elf: Use standard ID naming for toolchain categories

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -1,6 +1,10 @@
 debug = Debug
 release = Release
 
+# Base toolchain
+base.platform = ARC Platform
+base.builder = ARC GNU Builder
+
 # Target processor
 option.target = Target Processor
 option.use_tcf = Use TCF
